@@ -85,8 +85,11 @@ typedef struct _GCond GCond;
 #endif
 
 #if PLATFORM(QT)
+#include <qglobal.h>
+QT_BEGIN_NAMESPACE
 class QMutex;
 class QWaitCondition;
+QT_END_NAMESPACE
 #endif
 
 #include <stdint.h>
@@ -117,8 +120,8 @@ typedef pthread_cond_t PlatformCondition;
 typedef GMutex* PlatformMutex;
 typedef GCond* PlatformCondition;
 #elif PLATFORM(QT)
-typedef QMutex* PlatformMutex;
-typedef QWaitCondition* PlatformCondition;
+typedef QT_PREPEND_NAMESPACE(QMutex)* PlatformMutex;
+typedef QT_PREPEND_NAMESPACE(QWaitCondition)* PlatformCondition;
 #elif PLATFORM(WIN_OS)
 struct PlatformMutex {
     CRITICAL_SECTION m_internalMutex;
