@@ -20,7 +20,10 @@
 #ifndef EDITCOMMANDQT_H
 #define EDITCOMMANDQT_H
 
+#include <qglobal.h>
+QT_BEGIN_NAMESPACE
 class QUndoCommand;
+QT_END_NAMESPACE
 
 #include <QUndoCommand>
 #include <EditCommand.h>
